<?xml version="1.0"?>

<resources>

    <string name="app_name">FootBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>

    <string name="member_in_groups">Member in Groups</string>

    <string name="group_members">Group members</string>

    <string name="location_not_set">Location not set</string>

    <string name="next_game_tag">next_game</string>

    <string name="email">E-Mail address</string>

    <string name="full_name">Full Name</string>

    <string name="surname">Last Name</string>

    <string name="first_name">First Name</string>

    <string name="password">Password</string>

    <string name="conf_password">Confirm Password</string>

    <string name="where_from">Where from?</string>

    <string name="team_name">Team Name</string>

    <string name="next_game_date">Next Game Date</string>

    <string name="group_name">Group\'s Name</string>

    <string name="where_do_u_play">Where do you play?</string>

    <string name="What_time">When do you play?</string>

    <string name="address">City you from</string>

    <string name="preffered_time">Wed, 7 PM</string>

    <string name="price">Price</string>

    <string name="next_game_location">Game Location</string>

    <string name="next_game_when">Game time</string>
    <string name="free">Free</string>
    <string name="search_query">Looking for something?</string>
    <string name="position">Position</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="find_group">Join Group</string>
    <string name="create_or_search_group">Create new group \nor find your friends</string>
    <string name="date_not_set">When?</string>
    <string name="remove_group">Group remove</string>
    <string name="sure_remove_group">Are you sure you want to remove this group?</string>
    <string name="next_game_title">Next Game</string>
    <string name="next_game_announcment_pt1">Next game set to </string>
    <string name="next_game_announcment_pt2">Entrie fee is </string>
    <string name="set_ng_date_error">Please set a DATE for next match</string>
    <string name="error_not_admin">Only group admin can do that</string>


    <string-array name="pitch_spinner">

        <item>Asphalt</item>

        <item>Synthetic</item>

        <item>Grass</item>

    </string-array>


    <string-array name="position_spinner">

        <item>Free Role</item>

        <item>Defender</item>

        <item>Midfielder</item>

        <item>Striker</item>

        <item>Goalkeeper</item>

    </string-array>


    <string-array name="where_play_spinner">

    <item>Center</item>

    <item>North</item>

    <item>South</item>

    <item>Shfela</item>

    <item>Sharon</item>

    <item>Tel Aviv</item>

    <item>Beer Sheva</item>

    <item>Eilat</item>

    <item>Ashdod</item>

    <item>Haifa</item>

    <item>Haifa</item>

</string-array>
    <string name="login_please">please log in</string>
    <string name="wait_for_you">We are waiting for you</string>
    <string name="enter_message">Enter message</string>
    <string name="search_fields">Show fields around me</string>
    <string name="please_log_in">Please log in</string>
    <string name="preferd_pitch">Prefered pitch:</string>
    <string name="prefered_region">Prefered Region:</string>
    <string name="where_play">Where play?</string>
    <string name="prefered_play_when">Prefered when play</string>
    <string name="next_game">Next game</string>
    <string name="asphalt">Asphalt</string>
    <string name="general_details">General details</string>
    <string name="curr_match">Current Match</string>
    <string name="score">Score</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="wellcom">Welcome</string>
    <string name="check_your_email">Check your email account to restore your user and sign in again</string>
    <string name="bye_bye">Bye Bye</string>
    <string name="sign_in_succ">Sign in succsessfull</string>
    <string name="sign_in_fail">Sign in failed</string>
    <string name="sign_up_succ">Sign up succsessfull</string>
    <string name="sign_up_fail">Sign up failed</string>
    <string name="field_not_empty">Field cannot be empty</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="name_too_long">Username is too long</string>
    <string name="password_must_be">Password must be at least 6 six characters with one capital letter</string>
    <string name="missmatch_passwords">Missmatch between two passwords</string>
    <string name="group_created">New group created :</string>
    <string name="time_is_up">Time is up!!!</string>
    <string name="restart_game">Go to game page and start new game</string>
    <string name="new_message_from">"New message from: "</string>
    <string name="change_game_time">Change game time</string>
    <string name="scroll_game_time_change">Scroll the time to change game length</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="enter_valid_time">Enter valid time by click the text</string>
    <string name="image_change">Image change</string>
    <string name="image_change_option">Select image change option</string>
    <string name="upload_in_progress">Upload image in progress</string>
    <string name="remove_player">Remove player?</string>
    <string name="sure_remove_player">Are you sure that you want remove this player?</string>
    <string name="curr_location">Current location</string>
    <string name="permission_denied">Permission denied</string>
    <string name="create_new_chat">Create new chat</string>
    <string name="free_role">Free role</string>
    <string name="anywhere">Anywhere</string>
    <string name="error_chat_with_self">If you need to chat with yourself just get a MIRROR :)</string>
    <string name="new_player_added_broadcasr">Just got a new player!</string>
    <string name="about_title">made by: \n Gal Kiraly and Oriel Ohayun\n</string>
    <string name="about_msg">

        App Designed by:\n\n
        Gal kiraly\n\n
        Icons from flaticon authors:\n
        \n<string name="Pixel_perfect"><a href="http://www.flaticon.com/authors/pixel-perfect">Pixel perfect</a></string>
        \n<string name="Eucalyp"><a href="http://www.flaticon.com/authors/Eucalyp">Eucalyp</a></string>
        \n<string name="catkuro"><a href="http://www.flaticon.com/authors/catkuro">Ccatkuro</a></string>
        \n<string name="Smashicons"><a href="http://www.flaticon.com/authors/Smashicons">Smashicons</a></string>
        \n<string name="my_link"><a href="http://www.flaticon.com/authors/pongsakornRed">pongsakornRed</a></string>
        \n<string name="pongsakornRed"><a href="http://www.flaticon.com/authors/smalllikeart">pongsakornRed</a></string>
        \n<string name="xnimrodx"><a href="http://www.flaticon.com/authors/xnimrodx">xnimrodx</a></string>
        \n<string name="bqlqn"><a href="http://www.flaticon.com/authors/bqlqn">bqlqn</a></string>
        \n<string name="mavadee"><a href="http://www.flaticon.com/authors/mavadee">mavadee</a></string>
        \n<string name="wanicon"><a href="http://www.flaticon.com/authors/wanicon">wanicon</a></string>


    </string>

</resources>