<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:paddingBottom="30dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/grass_background"
        android:background="@color/sandy_brown"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/lists_background">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_layout"
            app:errorEnabled="true"
            style="@style/Login_Dialog_TextLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_layout"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            style="@style/Login_Dialog_TextLayout"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/password_layout"
            style="@style/Login_Dialog_TextLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/password_confirm_layout"
            style="@style/Login_Dialog_TextLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conf_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/region_layout"
            style="@style/Login_Dialog_TextLayout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/where_from"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <ImageButton
        style="@style/Dialog_Buttons"
        android:id="@+id/sign_in_btn_logdia"
        android:background="@android:color/transparent"
        android:src="@drawable/signin_color"
        android:scaleType="fitCenter"
        />
    <ImageButton
        style="@style/Dialog_Buttons"
        android:id="@+id/sign_up_btn_logdia"
        android:background="@android:color/transparent"
        android:src="@drawable/signup_color"
        android:scaleType="fitCenter"
        />

</LinearLayout>